--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Bot - a Discord Bot</title>
+    <title>FUNKY MUSIC - a Discord Bot</title>
     <link rel="stylesheet" href="assets/css/bulma.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
@@ -39,7 +39,7 @@
     >
       <div class="navbar-brand mt-2 mb-2">
         <a class="navbar-item" href="#">
-          <strong>Your Bot</strong>
+          <strong>FUNKY MUSIC</strong>
 
           <!-- or if you want to use image -->
           <!-- <img
@@ -112,7 +112,7 @@
           <div class="columns">
             <div class="column mr-6 mt-12" data-aos="fade-up">
               <p class="title has-text-white has-text-weight-bold">
-                Time to add [your bot] to your server.
+                Time to add [FUNKY MUSIC] to your server.
               </p>
               <p class="subtitle has-text-grey-light is-size-6 mt-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
