--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
               <div class="buttons">
-                <a href="#" class="button is-info">
+                <a href="https://discord.com/oauth2/authorize?client_id=1281872745113587752&permissions=1729125982424896&integration_type=0&scope=bot+applications.commands" class="button is-info">
                   <strong>Add To Discord</strong>
                 </a>
 
