--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="navbar-end">
-          <a href="#" class="navbar-item is-tab" target="_blank">
+          <a href="https://discord.gg/JgMKYY83mt" class="navbar-item is-tab" target="_blank">
             <i class="fa-brands fa-discord"></i>
           </a>
 
@@ -92,7 +92,7 @@
 
           <div class="navbar-item">
             <div class="buttons">
-              <a href="#" class="button is-blurple">
+              <a href="https://discord.gg/JgMKYY83mt" class="button is-blurple">
                 <strong
                   ><i class="fa-solid fa-right-to-bracket mr-2"></i>
                   Login</strong
@@ -123,7 +123,7 @@
                   <strong>Add To Discord</strong>
                 </a>
 
-                <a href="#" class="button is-primary is-outlined">
+                <a href="https://discord.gg/JgMKYY83mt" class="button is-primary is-outlined">
                   <strong><i class="fa-solid fa-crown"></i> Premium</strong>
                 </a>
               </div>
@@ -299,7 +299,7 @@
       <div class="columns">
         <div class="column has-text-left">
           <p class="title has-text-weight-bold">
-            Ready to try <span class="blurple">[your bot]</span>?
+            Ready to try <span class="blurple">[FUNKY MUSIC]</span>?
           </p>
           <p class="subtitle mt-3 has-text-gray">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -331,7 +331,7 @@
         <p>
           <span class="has-text-weight-bold">[Your Bot]</span>
           <br />
-          &copy; <span id="cp-year"></span> Copyright [Bot Owner]. All Rights
+          &copy; <span id="cp-year"></span> Copyright [@gamernestt]. All Rights
           Reserved.
         </p>
 
@@ -342,8 +342,8 @@
             class="blurple has-text-weight-bold"
             target="_blank"
             >JstnLT</a
-          >.<br>The Original Website Design is Open Source on <a
-            href="https://github.com/JastinXyz/discord-bot-landing-page-web"
+          >.<br>made by team funky <a
+            href="https://discord.gg/JgMKYY83mt"
             class="blurple has-text-weight-bold"
             target="_blank"
             >Github</a
