--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
 
         <p>
-          <span class="has-text-weight-bold">[Your Bot]</span>
+          <span class="has-text-weight-bold">[FUNKY MUSIC]</span>
           <br />
           &copy; <span id="cp-year"></span> Copyright [@gamernestt]. All Rights
           Reserved.
@@ -338,15 +338,15 @@
         <p style="letter-spacing: 0.1em;" class="is-uppercase">
           Website Designed By
           <a
-            href="https://jstnlt.my.id"
+            href="https://discord.gg/JgMKYY83mt"
             class="blurple has-text-weight-bold"
             target="_blank"
-            >JstnLT</a
+            >AFJALGAMER</a
           >.<br>made by team funky <a
             href="https://discord.gg/JgMKYY83mt"
             class="blurple has-text-weight-bold"
             target="_blank"
-            >Github</a
+            >DISCORD</a
           >
         </p>
       </div>
