--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
 
         <div class="column has-text-centered">
-          <p class="title has-text-weight-bold lined">000</p>
+          <p class="title has-text-weight-bold lined">56+</p>
           <span class="subtitle has-text-weight-bold blurple"><i class="fa-solid fa-terminal"></i> Commands</span>
         </div>
 
@@ -305,7 +305,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="#" class="button is-blurple is-medium"
+          <a href="https://discord.gg/JgMKYY83mt" class="button is-blurple is-medium"
             ><strong><i class="fa-solid fa-book"></i> Get Started</strong></a
           >
         </div>
@@ -319,7 +319,7 @@
     <footer class="footer bg-base">
       <div class="content has-text-centered has-text-white">
         <div class="mb-2">
-          <a href="#" class="has-text-white" target="_blank">
+          <a href="https://discord.gg/JgMKYY83mt" class="has-text-white" target="_blank">
             <i class="fa-brands fa-discord"></i>
           </a>
           &nbsp; &nbsp;
