--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <img
                 class="image has-image-centered vert-move mt-4"
                 src="assets/img/relaunch_day.svg"
-                alt="https://cdn.discordapp.com/avatars/1281872745113587752/46529d92da38a0b84c4eba3b0c3e178b.webp?size=2048"
+                alt="FUNKY MUSIC "
                 style="width: 20rem;"
               />
             </div>
