--- a/index.html
+++ b/index.html
@@ -172,10 +172,7 @@
           <div class="column mr-6">
             <h4 class="title">Feature <span class="blurple">#1</span></h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              *Music Playback*: The ability to play music from various sources such as YouTube, Spotify, SoundCloud, or local files.
             </p>
           </div>
           <div class="column" data-aos="fade-left">
@@ -206,10 +203,7 @@
               Feature <span class="has-text-primary">#2</span>
             </h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              *Queue Management*: Allow users to add songs to a queue, remove songs, and skip to the next song.
             </p>
           </div>
         </div>
@@ -224,10 +218,7 @@
               Feature <span class="has-text-warning">#3</span>
             </h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              Music Search*: Enable users to search for specific songs or artists and play them directly.
             </p>
           </div>
           <div class="column" data-aos="fade-left">
@@ -256,10 +247,7 @@
           <div class="column">
             <h4 class="title">Feature <span class="has-text-info">#4</span></h4>
             <p class="subtitle mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              *Volume Control*: Allow users to adjust the volume of the music playback.
             </p>
           </div>
         </div>
